--- a/_publications/2020RHBF.md
+++ b/_publications/2020RHBF.md
@@ -2,7 +2,7 @@
 title: "Alternative Adaptation Strategy during the Paleolithic–Neolithic Transition: Potential Use of Aquatic Resources in the Western Middle Yangtze Valley, China"
 collection: publications
 permalink: /publication/2020RHBF
-excerpt: 'The study proposes that at least two different adaptation strategy changes occurred in the western Jianghan Plain during the Paleolithic–Neolithic transition, i.e., rice agriculture or complex hunting–gathering. These strategies represent adaptations to the different ecological conditions at the crossroads of habitat types.'
+excerpt: 'Archaeology; Lithic analysis; China; Paleolithic-Neolithic transition; Teshoa; RHBF'
 date: 2020-09-21
 venue: 'Quaternary'
 paperurl: 'http://academicpages.github.io/files/2020RHBF.pdf'
