--- a/_publications/2021p-m.md
+++ b/_publications/2021p-m.md
@@ -3,7 +3,7 @@ title: "Using evolutionary theory to hypothesize a transition from patriliny to 
 collection: publications
 permalink: /publication/2021p-m
 excerpt: 'Anthropology; Evolutionary theory; Southwest China; Mosuo; Kinship'
-date: 2021-03
+date: 2021-03-12
 venue: 'Matrix: A Journal for Matricultural Studies'
 paperurl: 'http://rzliu37.github.io/files/2021p-m.pdf'
 citation: 'Mattison, S. M., Sum, C. Y., Reynolds, A. Z., Baca, G. D., Blumenfield, T., Niedbalski, S., ... & Wander, K. (2021). Using evolutionary theory to hypothesize a transition from patriliny to matriliny and back again among the ethnic Mosuo of Southwest China. Matrix: A Journal for Matricultural Studies.'
