--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -7,7 +7,7 @@
     "editable": true
    },
    "source": [
-    "# Publications markdown generator for academicpages\n",
+    "# Publications markdown generator for rzliu37\n",
     "\n",
     "Takes a TSV of publications with metadata and converts them for use with [academicpages.github.io](academicpages.github.io). This is an interactive Jupyter notebook ([see more info here](http://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/what_is_jupyter.html)). The core python code is also in `publications.py`. Run either from the `markdown_generator` folder after replacing `publications.tsv` with one containing your data.\n",
     "\n",
