--- a/_teaching/2019Fall_2022Fall.md
+++ b/_teaching/2019Fall_2022Fall.md
@@ -12,20 +12,25 @@ I am a teaching assistant of anthropology since 2019 fall.
 
 ANTH350 Human Biology
 ======
-time: 2019Fall (in-person), 2020Spring (in-person)
-job: lab, grading, office hour
+
+- 2019Fall (in-person), 2020Spring (in-person)
+
+- Lab, grading, office hour
 
 ANTH1170 Human Life
 ======
-time: 2020Fall (online)
-job: grading, office hour
+- 2020Fall (online)
+
+- Grading, office hour
 
 ANTH2190 Forensic Anthropology 
 ======
-time: 2021Fall (in-person)
-job: lab, grading, office hour
+- 2021Fall (in-person)
+
+- Lab, grading, office hour
 
 ANTH357 Human Origins
 ======
-time: 2022Spring (in-person)
-job: grading, office hour
+- 2022Spring (in-person)
+
+- Grading, office hour
