--- a/_publications/2020RHBF.md
+++ b/_publications/2020RHBF.md
@@ -1,7 +1,7 @@
 ---
 title: "Alternative Adaptation Strategy during the Paleolithic–Neolithic Transition: Potential Use of Aquatic Resources in the Western Middle Yangtze Valley, China"
 collection: publications
-citation: 'Liu, Ruizhe, Hui Liu, and Shengqian Chen. 2020. "Alternative Adaptation Strategy during the Paleolithic–Neolithic Transition: Potential Use of Aquatic Resources in the Western Middle Yangtze Valley, China" Quaternary 3, no. 3: 28.'
+citation: '**Liu, Ruizhe**, Hui Liu, and Shengqian Chen. 2020. "Alternative Adaptation Strategy during the Paleolithic–Neolithic Transition: Potential Use of Aquatic Resources in the Western Middle Yangtze Valley, China" Quaternary 3, no. 3: 28.'
 permalink: /publication/2020RHBF
 excerpt: 'Archaeology; Lithic analysis; China; Paleolithic-Neolithic transition; Teshoa; RHBF'
 date: 2020-09-21
@@ -14,4 +14,4 @@ The middle Yangtze Valley is an important region for studying the origin of rice
 
 [Download paper here](http://academicpages.github.io/files/2020RHBF.pdf)
 
-"Liu, Ruizhe, Hui Liu, and Shengqian Chen. 2020. "Alternative Adaptation Strategy during the Paleolithic–Neolithic Transition: Potential Use of Aquatic Resources in the Western Middle Yangtze Valley, China" Quaternary 3, no. 3: 28. https://doi.org/10.3390/quat3030028."
+"**Liu, Ruizhe**, Hui Liu, and Shengqian Chen. 2020. "Alternative Adaptation Strategy during the Paleolithic–Neolithic Transition: Potential Use of Aquatic Resources in the Western Middle Yangtze Valley, China" Quaternary 3, no. 3: 28. https://doi.org/10.3390/quat3030028."
