--- a/_publications/2021SNA.md
+++ b/_publications/2021SNA.md
@@ -2,7 +2,7 @@
 title: "Gender Differences in Social Networks Based on Prevailing Kinship Norms in the Mosuo of China"
 collection: publications
 permalink: /publication/2021SNA
-citation: 'Mattison SM, MacLaren NG, Liu R, Reynolds AZ, Baca GD, Mattison PM, Zhang M, Sum C-Y, Shenk MK, Blumenfield T, von Rueden C, Wander K. Gender Differences in Social Networks Based on Prevailing Kinship Norms in the Mosuo of China. Social Sciences. 2021; 10(7):253. https://doi.org/10.3390/socsci10070253'
+citation: 'Mattison SM, MacLaren NG, **Liu R**, Reynolds AZ, Baca GD, Mattison PM, Zhang M, Sum C-Y, Shenk MK, Blumenfield T, von Rueden C, Wander K. Gender Differences in Social Networks Based on Prevailing Kinship Norms in the Mosuo of China. Social Sciences. 2021; 10(7):253. https://doi.org/10.3390/socsci10070253'
 excerpt: 'Anthropology; Kinship; SNA; Southwest China; Mosuo; Gender'
 date: 2021-07-02
 venue: 'Social Science'
@@ -13,4 +13,4 @@ Although cooperative social networks are considered key to human evolution, emph
 
 [Download paper here](http://academicpages.github.io/files/2021SNA.pdf)
 
-"Mattison SM, MacLaren NG, Liu R, Reynolds AZ, Baca GD, Mattison PM, Zhang M, Sum C-Y, Shenk MK, Blumenfield T, von Rueden C, Wander K. Gender Differences in Social Networks Based on Prevailing Kinship Norms in the Mosuo of China. Social Sciences. 2021; 10(7):253. https://doi.org/10.3390/socsci10070253"
+"Mattison SM, MacLaren NG, **Liu R**, Reynolds AZ, Baca GD, Mattison PM, Zhang M, Sum C-Y, Shenk MK, Blumenfield T, von Rueden C, Wander K. Gender Differences in Social Networks Based on Prevailing Kinship Norms in the Mosuo of China. Social Sciences. 2021; 10(7):253. https://doi.org/10.3390/socsci10070253"
