--- a/_publications/2021p-m.md
+++ b/_publications/2021p-m.md
@@ -2,7 +2,7 @@
 title: "Using evolutionary theory to hypothesize a transition from patriliny to matriliny and back again among the ethnic Mosuo of Southwest China"
 collection: publications
 permalink: /publication/2021p-m
-citation: 'Mattison, S. M., Sum, C. Y., Reynolds, A. Z., Baca, G. D., Blumenfield, T., Niedbalski, S., ... & Wander, K. (2021). Using evolutionary theory to hypothesize a transition from patriliny to matriliny and back again among the ethnic Mosuo of Southwest China. Matrix: A Journal for Matricultural Studies.'
+citation: 'Mattison, Siobhan M., Chun-Yi Sum, Adam Z. Reynolds, Gabrielle D. Baca, Tami Blumenfield, Sara Niedbalski, **Ruizhe Liu** et al. "Using evolutionary theory to hypothesize a transition from patriliny to matriliny and back again among the ethnic Mosuo of Southwest China." Matrix: A Journal for Matricultural Studies (2021).'
 excerpt: 'Anthropology; Evolutionary theory; Southwest China; Mosuo; Kinship'
 date: 2021-03-12
 venue: 'Matrix: A Journal for Matricultural Studies'
@@ -14,4 +14,4 @@ Transitions to matriliny are said to be relatively rare. This evidence is someti
 
 [Download paper here](http://academicpages.github.io/files/2021p-m.pdf)
 
-"Mattison, S. M., Sum, C. Y., Reynolds, A. Z., Baca, G. D., Blumenfield, T., Niedbalski, S., ... & Wander, K. (2021). Using evolutionary theory to hypothesize a transition from patriliny to matriliny and back again among the ethnic Mosuo of Southwest China. Matrix: A Journal for Matricultural Studies."
+"Mattison, Siobhan M., Chun-Yi Sum, Adam Z. Reynolds, Gabrielle D. Baca, Tami Blumenfield, Sara Niedbalski, **Ruizhe Liu** et al. "Using evolutionary theory to hypothesize a transition from patriliny to matriliny and back again among the ethnic Mosuo of Southwest China." Matrix: A Journal for Matricultural Studies (2021)."
