--- a/_publications/2022MI.md
+++ b/_publications/2022MI.md
@@ -2,7 +2,7 @@
 title: "Context Specificity of “Market Integration” among the Matrilineal Mosuo of Southwest China"
 collection: publications
 permalink: /publication/2022MI
-citation: 'Mattison, Siobhán M., Darragh Hare, Neil G. MacLaren, Adam Z. Reynolds, Chun-Yi Sum, Ruizhe Liu, Mary K. Shenk et al. "Context Specificity of “Market Integration” among the Matrilineal Mosuo of Southwest China." Current Anthropology 63, no. 1 (2022): 118-124.'
+citation: 'Mattison, Siobhán M., Darragh Hare, Neil G. MacLaren, Adam Z. Reynolds, Chun-Yi Sum, **Ruizhe Liu**, Mary K. Shenk et al. "Context Specificity of “Market Integration” among the Matrilineal Mosuo of Southwest China." Current Anthropology 63, no. 1 (2022): 118-124.'
 excerpt: 'Anthropology; Evolutionary theory; Southwest China; Mosuo; Market Integration'
 date: 2022-02-01
 venue: 'Current Anthropology'
@@ -14,4 +14,4 @@ Market integration (MI) is a complex process through which individuals integrate
 
 [Download paper here](http://academicpages.github.io/files/2022MI.pdf)
 
-"Mattison, Siobhán M., Darragh Hare, Neil G. MacLaren, Adam Z. Reynolds, Chun-Yi Sum, Ruizhe Liu, Mary K. Shenk et al. "Context Specificity of “Market Integration” among the Matrilineal Mosuo of Southwest China." Current Anthropology 63, no. 1 (2022): 118-124."
+"Mattison, Siobhán M., Darragh Hare, Neil G. MacLaren, Adam Z. Reynolds, Chun-Yi Sum, **Ruizhe Liu**, Mary K. Shenk et al. "Context Specificity of “Market Integration” among the Matrilineal Mosuo of Southwest China." Current Anthropology 63, no. 1 (2022): 118-124."
