--- a/_publications/2022RHBF.md
+++ b/_publications/2022RHBF.md
@@ -2,7 +2,7 @@
 title: "Ridged-hammer Bipolar Flaking and the Paleolithic-Neolithic Transition (锐棱砸击技术与旧新石器时代过渡)"
 collection: publications
 permalink: /publication/2022RHBF
-citation: 'Shengqian CHEN, Ruizhe LIU, Yixin ZHOU, Bing DONG, Jun ZHAO, Hui. LIU. "Ridged-hammer Bipolar Flaking and the Paleolithic-Neolithic Transition" JiangHan Archaeology 03,180, (2022): 59-69.'
+citation: 'Shengqian CHEN, **Ruizhe LIU**, Yixin ZHOU, Bing DONG, Jun ZHAO, Hui. LIU. "Ridged-hammer Bipolar Flaking and the Paleolithic-Neolithic Transition" JiangHan Archaeology 03,180, (2022): 59-69.'
 excerpt: 'Archaeology; Lithic Analysis; China; Paleolithic-Neolithic transition; Teshoa; RHBF'
 date: 2022-06-15
 venue: 'JiangHan Archaeology (江汉考古)'
@@ -13,4 +13,4 @@ The ridged-hammer bipolar flaking (RHBF) was characterized in the 1970s but how 
 
 [Download paper here](http://academicpages.github.io/files/2022RHBF.pdf)
 
-"Shengqian CHEN, Ruizhe LIU, Yixin ZHOU, Bing DONG, Jun ZHAO, Hui. LIU. "Ridged-hammer Bipolar Flaking and the Paleolithic-Neolithic Transition" JiangHan Archaeology 03,180, (2022): 59-69."
+"Shengqian CHEN, **Ruizhe LIU**, Yixin ZHOU, Bing DONG, Jun ZHAO, Hui. LIU. "Ridged-hammer Bipolar Flaking and the Paleolithic-Neolithic Transition" JiangHan Archaeology 03,180, (2022): 59-69."
