--- a/_teaching/2019Fall_2022Fall.md
+++ b/_teaching/2019Fall_2022Fall.md
@@ -1,5 +1,5 @@
 ---
-title: "Teaching Assistant"
+title: "Graduate Assistant"
 collection: teaching
 type: "Undergraduate course"
 permalink: /teaching/2019Fall_2022Fall
@@ -8,7 +8,7 @@ date: 2019-08-19
 location: "Albuquerque, NM"
 ---
 
-I am a teaching assistant of anthropology since 2019 fall. 
+I am a graduate assistant of anthropology since 2019 fall. 
 
 ANTH350 Human Biology
 ======
