--- a/_teaching/2019Fall_2022Fall.md
+++ b/_teaching/2019Fall_2022Fall.md
@@ -34,3 +34,9 @@ ANTH357 Human Origins
 - 2022Spring (in-person)
 
 - Grading, office hour
+
+ANTH328 Near East Archaeology
+======
+- 2022Fall (in-person)
+
+- Grading, Group discussion, learn system arrangement, office hour
