--- a/_teaching/2019Fall_2022Fall.md
+++ b/_teaching/2019Fall_2022Fall.md
@@ -40,3 +40,15 @@ ANTH328 Near East Archaeology
 - 2022Fall (in-person)
 
 - Grading, Group discussion, learn system arrangement, office hour
+
+
+---
+title: "Teaching Assistant (Instructor)"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/Instructor
+venue: "Anthropology department, UNM"
+date: 2019-08-19
+location: "Albuquerque, NM"
+---
+
